--- a/计算机图形学/计算机图形学.md
+++ b/计算机图形学/计算机图形学.md
@@ -106,9 +106,9 @@ void main(int argc,char **argv) {
 
 屏幕上的位置使用与帧缓存中像素位置相对应的整数__屏幕坐标__进行描述。
 
-像素坐标值给出扫描行号($y$值)和列号($x$值)。
+像素坐标值给出扫描行号( $ y $ 值)和列号( $ x $ 值)。
 
-从屏幕最上面的0行到最下面的某整数值$y_{max}$行。从左到右，从0到$x_{max}$进行编号。
+从屏幕最上面的0行到最下面的某整数值 $ y_{max} $ 行。从左到右，从0到 $ x_{max} $ 进行编号。
 
 但是，使用软件命令可以按照任何方式设定屏幕坐标系，例如，设置左下角为原点，用整数坐标系或非笛卡尔坐标系描述图形。
 
@@ -120,11 +120,11 @@ void main(int argc,char **argv) {
 
 有些图形软件允许使用__相对坐标__来描述位置。使用这一方法我们可以从离开最后一次引用的位置(称为__当前位置__) 的位移量来指定坐标位置。
 
->如位置$\left(3,8\right)$是应用程序刚刚引用的位置，则相对坐标描述$\left(2,-1\right)$和绝对坐标$\left(5,7\right)$相对应。
+>如位置 $ \left(3,8\right) $ 是应用程序刚刚引用的位置，则相对坐标描述 $ \left(2,-1\right) $ 和绝对坐标 $ \left(5,7\right) $ 相对应。
 
 ###  OpenGL中指定二维世界坐标系统
 
-我们可以用`gluOrtho2D`命令设定一个二维笛卡尔坐标系，该函数的变量指定图形的$x$和$y$坐标范围。我们可以用下列语句定义屏幕显示窗口的坐标系统：
+我们可以用`gluOrtho2D`命令设定一个二维笛卡尔坐标系，该函数的变量指定图形的 $ x $ 和 $ y $ 坐标范围。我们可以用下列语句定义屏幕显示窗口的坐标系统：
 
 ```C++
 glMatrixMode(GL_PROJECTION);
@@ -160,9 +160,9 @@ glEnd();
 
 * `glVerTex`的第二个后缀代表其数值描述使用的数据结构
 
-  > $i(整数),s(短整数),f(浮点数),d(双精度浮点数)$
+  >  $ i(整数),s(短整数),f(浮点数),d(双精度浮点数) $ 
 
-* 如果用矩阵形式坐标位置，则需要第三个后缀码：$v("向量")$
+* 如果用矩阵形式坐标位置，则需要第三个后缀码： $ v("向量") $ 
 
 画点的几种形式
 
@@ -246,11 +246,11 @@ glEnd();
 
 鉴别对象的内外区域
 
-* __奇偶规则__: 从任意位置$P$到对象坐标范围以外的远点画一条概念上的直线(不过多边形顶点)，统计延该直线与各边的交点数目。若与这条直线相交的多边形边数为奇数，则$P$是内部点，否则是外部点。
+* __奇偶规则__: 从任意位置 $ P $ 到对象坐标范围以外的远点画一条概念上的直线(不过多边形顶点)，统计延该直线与各边的交点数目。若与这条直线相交的多边形边数为奇数，则 $ P $ 是内部点，否则是外部点。
 
-* __非零环绕数__: 非零就是路径包围的区域任意点$P$向外做一条射线，环绕数为0，如果相交的边是从左向右环绕数减1，从右向左环绕数加1，环绕数不为零$P$为内部点，反之为外部点 。
+* __非零环绕数__: 非零就是路径包围的区域任意点 $ P $ 向外做一条射线，环绕数为0，如果相交的边是从左向右环绕数减1，从右向左环绕数加1，环绕数不为零 $ P $ 为内部点，反之为外部点 。
 
-  > 一种确定有向边界穿越的方法是延对象边建立向量，将从$P$点出发的射线向量$\vec{u}$与穿过射线的每条边向量$\vec{E}$进行叉积运算。如果对于某特定边，叉积$\vec{u}\times\vec{E}$的$z$分量为正，那么边从右向左环绕数加1，反之环绕数减1。
+  > 一种确定有向边界穿越的方法是延对象边建立向量，将从 $ P $ 点出发的射线向量 $ \vec{u} $ 与穿过射线的每条边向量 $ \vec{E} $ 进行叉积运算。如果对于某特定边，叉积 $ \vec{u}\times\vec{E} $ 的 $ z $ 分量为正，那么边从右向左环绕数加1，反之环绕数减1。
 
 注意：非零环绕规则将有些区域定义为內部，而奇偶规则将其定义为外部
 
@@ -260,7 +260,7 @@ glEnd();
 
 场景中对象的几何数据简单组织成三张表：顶点表、边表和面片表
 
-> 面片表$\rightarrow$边表$\rightarrow$顶点表($\rightarrow$表示指针)
+> 面片表 $ \rightarrow $ 边表 $ \rightarrow $ 顶点表( $ \rightarrow $ 表示指针)
 
 <img src=".\img\514234423.png" alt="514234423" style="zoom:50%;" />
 
@@ -419,7 +419,7 @@ glutInitDisplayMode(GLUT_SINGLE | GLUT_RGB);
 // GLUT_RGB : 设定RGB模式，如果要用指向颜色表的索引来指定颜色，则用GLUT_INDEX代替GLUT_RGB 
 ```
 >__RGBA模式__
-RGBA模式比RGB模式多了一个$\alpha$系数，用于控制颜色调和。要使用RGBA模式，将上述GLUT_RGB替换为GLUT_RGBA。$\alpha$的值与透明度相对应，通常通过调节$\alpha$的值来调节透明度。
+RGBA模式比RGB模式多了一个 $ \alpha $ 系数，用于控制颜色调和。要使用RGBA模式，将上述GLUT_RGB替换为GLUT_RGBA。 $ \alpha $ 的值与透明度相对应，通常通过调节 $ \alpha $ 的值来调节透明度。
 
 在__RGB(RGBA模式)__模式中，使用下面函数设定颜色分量：
 
@@ -453,11 +453,11 @@ glDisable(GL_BLEND);  // 关闭颜色调和特性
 
 计算方法如下:
 
-$$
+ $  $ 
 (S_rR_s + D_rR_d , S_gG_s + D_gG_d, S_bB_s +D_bB_d,S_aA_s+D_aA_d)
-$$
+ $  $ 
 
-其中RGBA源颜射分量为$(R_s,G_s,B_s,A_s)$，目标颜色分量为$(R_d,G_d,B_d,A_d)$,源调和因子为$(S_r,S_g,S_b,S_a)$,而目标调和因子为$(D_r,D_g,D_b,D_a)$，取值范围为$(0.0,1.0)$
+其中RGBA源颜射分量为 $ (R_s,G_s,B_s,A_s) $ ，目标颜色分量为 $ (R_d,G_d,B_d,A_d) $ ,源调和因子为 $ (S_r,S_g,S_b,S_a) $ ,而目标调和因子为 $ (D_r,D_g,D_b,D_a) $ ，取值范围为 $ (0.0,1.0) $ 
 
 使用下列函数可设定调和因子的值：
 
@@ -528,5 +528,5 @@ glBegin(GL_TRIANGLES);
 glEnd();
 ```
 
-![插值填充](.\img\image-20210628184342723.png)
+![](.\img\image-20210628184342723.png)
 
